# esp32-hue-proximity-control

./: .gitignore  CMakeLists.txt  README.md
components/hue_helpers/: CMakeLists.txt  hue_helpers.c
components/hue_helpers/include/: hue_helpers.h
components/hue_https/: CMakeLists.txt  hue_https.c  hue_https_instance.c  hue_https_request_instance.c
components/hue_https/include/: hue_https.h
components/hue_https/private_include/: hue_https_private.h
components/hue_json_builder/: CMakeLists.txt  hue_json_builder.c
components/hue_json_builder/include/: hue_json_builder.h
components/hue_json_builder/test/: CMakeLists.txt  test_hue_json_builder.c  test_hue_json_builder_grouped_light.c  test_hue_json_builder_light.c  test_hue_json_builder_smart_scene.c  test_json_builder.c
components/hue_test_app/: CMakeLists.txt  hue_test_app.c
components/hue_test_app/include/: hue_test_app.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
main/: CMakeLists.txt  Kconfig.projbuild  hue_https.c  hue_json_builder.c  main.c  test.c  wifi_connect.c
main/include/: hue_helpers.h  hue_https.h  hue_json_builder.h  wifi_connect.h
test/: CMakeLists.txt
test/main/: CMakeLists.txt  hue_proximity_control_test.c
